# srcds-rs

./: .gitmodules  Cargo.toml  Makefile  apply-patches.sh  build.rs
include/: plugin.h  plugin_bridge.h
include/srcds-rs/: blobstore.h  srcds_rs.h
patches/hl2sdk/css/: 00001-public_tier0_platform.h__fix-dangline-else-compile-error.patch  00002-public_tier0_platform.h__dont-redefine-stricmp.patch
src/: lib.rs  main.rs  plugin.cpp  plugin_bridge.cpp
src/srcds-rs/: blobstore.cc  srcds_rs.cpp
srcds/: Cargo.toml  build.rs
srcds/include/: srcds.h
srcds/src/: lib.rs  srcds.cpp
